5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4369/executions/1613_2426.log
== TEST (2019-04-04 18:11:55) 
-- CODE:
h = float(input("Tempo: "))
v = float(input("Velocidade: "))
l = 12
v = km/h
dt = km/l
print()
print()

 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    v = km/h
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:12:07) 
-- CODE:
h = float(input("Tempo: "))
v = float(input("Velocidade: "))
l = 12
v = km/h
dt = km/l
print(v)
print(j)

 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    v = km/h
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:12:38) 
-- CODE:
h = float(input("Tempo: "))
v = float(input("Velocidade: "))
l = 12
vel = v/h
dt = v/l
print(vel)
print(j)

 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(j)
NameError: name 'j' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:12:50) 
-- CODE:
h = float(input("Tempo: "))
v = float(input("Velocidade: "))
l = 12
vel = v/h
dt = v/l
print(vel)
print(dt)

 
-- OUTPUT:
11.11111111111111
8.333333333333334
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:12:55) 
-- CODE:
h = float(input("Tempo: "))
v = float(input("Velocidade: "))
l = 12
vel = v/h
dt = v/l
print(vel)
print(dt)

 
-- OUTPUT:
11.11111111111111
8.333333333333334
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:12:57) 
-- CODE:
h = float(input("Tempo: "))
v = float(input("Velocidade: "))
l = 12
vel = v/h
dt = v/l
print(vel)
print(dt)

 
-- EXECUTION TIME:
0.199164
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
11.11111111111111
8.333333333333334
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
24.0
10.0
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
66.66666666666667
6.666666666666667
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:19:11) 
-- CODE:
h = float(input("Tempo: "))
v = float(input("Velocidade: "))
l = 12
vel = v*l
dt = v/l
print(vel)
print(dt)

 
-- OUTPUT:
1200.0
8.333333333333334
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:19:27) 
-- CODE:
h = float(input("Tempo: "))
v = float(input("Velocidade: "))
l = 12
vel = v*l
dt = v/l
print(vel)
print(dt)

 
-- EXECUTION TIME:
0.189604
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
1200.0
8.333333333333334
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
1440.0
10.0
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
960.0
6.666666666666667
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:20:32) 
-- CODE:
h = float(input("Tempo: "))
v = float(input("Velocidade: "))
l = 12
vel = v*l
dt = d/l
print(vel)
print(dt)

 
-- EXECUTION TIME:
0.197356
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1613/2426/main.py", line 5, in <module>
    dt = d/l
NameError: name 'd' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 19:12:13) 
-- CODE:
h = float(input("Tempo: "))
v = float(input("Velocidade: "))
d = v*t
consumo = d/12
print(d)
print(consumo)
-- EXECUTION TIME:
0.257155
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1613/2426/main.py", line 3, in <module>
    d = v*t
NameError: name 't' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:12:16) 
-- CODE:
h = float(input("Tempo: "))
v = float(input("Velocidade: "))
d = v*t
consumo = d/12
print(d)
print(consumo)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    d = v*t
NameError: name 't' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 19:12:19) 
-- CODE:
h = float(input("Tempo: "))
v = float(input("Velocidade: "))
d = v*t
consumo = d/12
print(d)
print(consumo)
-- EXECUTION TIME:
0.204086
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1613/2426/main.py", line 3, in <module>
    d = v*t
NameError: name 't' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 19:12:37) 
-- CODE:
h = float(input("Tempo: "))
v = float(input("Velocidade: "))
d = h*t
consumo = d/12
print(d)
print(consumo)
-- EXECUTION TIME:
0.200288
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1613/2426/main.py", line 3, in <module>
    d = h*t
NameError: name 't' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 19:12:39) 
-- CODE:
h = float(input("Tempo: "))
v = float(input("Velocidade: "))
d = h*t
consumo = d/12
print(d)
print(consumo)
-- EXECUTION TIME:
0.207277
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1613/2426/main.py", line 3, in <module>
    d = h*t
NameError: name 't' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:12:56) 
-- CODE:
t = float(input("Tempo: "))
v = float(input("Velocidade: "))
d = v*t
consumo = d/12
print(d)
print(consumo)
-- OUTPUT:
900.0
75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 19:12:58) 
-- CODE:
t = float(input("Tempo: "))
v = float(input("Velocidade: "))
d = v*t
consumo = d/12
print(d)
print(consumo)
-- EXECUTION TIME:
0.162014
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
900.0
75.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
600.0
50.0
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
96.0
8.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
